# FFAP

./: .gitattributes  .gitignore  FFAP_experiment_spec.md  README.md  pyproject.toml  requirements.txt
docs/: FFAP_EXPERIMENT_SUMMARY_2026-06-21.md  REMOTE_ENVIRONMENT_MINIMAL_2026-06-23.md  REMOTE_ENV_HANDOFF_AND_CLEANUP_2026-06-23.md  STAGE2_V2_REMOTE.md  STAGE2_V3_R0_DIAGNOSTIC_CONCLUSION.md  STAGE2_V3_R0_REVIEW_BRIEF.md  STAGE2_V3_REMOTE.md  STAGE2_W1_ABILITY_EXPERIMENT_REPORT_2026-06-21.md  STAGE2_W1_ABILITY_REMOTE.md  TASK0_REMOTE_START.md
ffap/: __init__.py  json_utils.py
remote/: bootstrap_task0.sh  check_env_fingerprint.sh  common.sh  install_task0_deps.sh  prefetch_stage2_v3_assets.sh  prefetch_task0_assets.sh  repair_blackwell_torch.sh  run_stage1_capability_eval.sh  run_stage1_magnitude_sweep.sh  run_stage1_make_figures.sh  run_stage1_smoke.sh  run_stage1_wanda_sweep.sh  run_stage2_gate_causal.sh  run_stage2_gate_causal_v2.sh  run_stage2_gate_causal_v3.sh  run_stage2_task_causal_gate.sh  run_stage2_v3_r0_diagnostic.sh  run_stage2_v3_tl_alignment_diagnostic.sh  run_stage2_w1_ability.sh  run_task0_preflight.sh  run_task0_smoke.sh
scripts/: stage1_capability_eval.py  stage1_magnitude_sweep.py  stage1_make_figures.py  stage1_smoke.py  stage1_wanda_sweep.py  stage2_gate_causal.py  stage2_gate_causal_v2.py  stage2_gate_causal_v3.py  stage2_task_causal_gate.py  stage2_v3_prefetch.py  stage2_v3_r0_diagnostic.py  stage2_v3_tl_alignment_diagnostic.py  stage2_w1_ability_crosslayer.py  task0_prefetch.py  task0_preflight.py  task0_smoke.py
tests/: test_stage2_v3.py
(+9 files in other folders)
